Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32027

Opening all .ibd files on InnoDB startup can be slow

    XMLWordPrintable

Details

    Description

      2023-08-14 9:13:29 0 [Note] InnoDB: Uses event mutexes
      2023-08-14 9:13:29 0 [Note] InnoDB: Compressed tables use zlib 1.2.12
      2023-08-14 9:13:29 0 [Note] InnoDB: Number of pools: 1
      2023-08-14 9:13:29 0 [Note] InnoDB: Using crc32 + pclmulqdq instructions
      2023-08-14 9:13:29 0 [Note] InnoDB: Initializing buffer pool, total size = 5368709120, chunk size = 134217728
      2023-08-14 9:13:29 0 [Note] InnoDB: Completed initialization of buffer pool
      2023-08-14 9:13:31 0 [Note] InnoDB: 128 rollback segments are active.
      2023-08-14 9:17:50 0 [Note] InnoDB: Creating shared tablespace for temporary tables
      2023-08-14 9:17:50 0 [Note] InnoDB: Setting file '.\ibtmp1' size to 12 MB. Physically writing the file full; Please wait ...
      2023-08-14 9:17:50 0 [Note] InnoDB: File '.\ibtmp1' size is now 12 MB.
      2023-08-14 9:17:50 0 [Note] InnoDB: 10.5.22 started; log sequence number 197013855628; transaction id 455278971

      2023-08-14 9:13:31 0 [Note] InnoDB: 128 rollback segments are active.
      2023-08-14 9:17:50 0 [Note] InnoDB: Creating shared tablespace for temporary tables.

      MySQL starts slowly, rollback segments and Creating shared tablespace with an interval of over 4 minutes.

      Attachments

        1. 1.jpg
          1.jpg
          414 kB
        2. 2.jpg
          2.jpg
          489 kB
        3. 3.jpg
          3.jpg
          156 kB
        4. Capture.PNG
          Capture.PNG
          317 kB
        5. dump50.sql.gz
          1.13 MB
        6. my.ini
          2 kB

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              kennyliao kennyliao
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 6.75h
                  1d 6.75h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.